<resources>
    <string name="app_name">Nhà Trọ Sinh Viên</string>
    <string name="nhaTroSinhVien">Nhà Trọ Sinh Viên</string>

    <string name="email">Email</string>
    <string name="mat_khau">Mật khẩu</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="quen_mat_khau"><u>Quên mật khẩu?</u></string>
    <string name="hoac">Hoặc</string>
    <string name="chua_co_tai_khoan_dang_ki_ngay"><u>Chưa có tài khoản? Đăng kí ngay</u></string>
    <string name="ten">Tên</string>
    <string name="xac_nhan_mat_khau">Xác nhận mật khẩu</string>
    <string name="dang_ki">Đăng kí</string>
    <string name="get_code">Chúng tôi sẽ gửi cho bạn một mã xác thực qua email đã đăng kí để lấy lại tài khoản</string>
    <string name="ma">Mã xác nhận</string>
    <string name="lay_ma_xac_nhan">Lấy mã xác nhận</string>
    <string name="xac_nhan">Xác nhận</string>
    <string name="mat_khau_moi">Mật khẩu mới</string>
    <string name="doi_mat_khau">Đổi mật khẩu</string>
    <string name="mat_khau_cu">Mật khẩu cũ</string>
    <string name="xac_nhan_mat_khau_moi">Xác nhận mật khẩu mới</string>
    <string name="xu_huong_tim_kiem">Xu hướng tìm kiếm</string>
    <string name="phong_moi_dang">Phòng mới đăng</string>
    <string name="tim_xung_quanh">Tìm xung quanh</string>
    <string name="tim_nhanh">Tìm nhanh</string>
    <string name="dang_phong">Đăng phòng</string>
    <string name="phong_da_dang">Phòng đã đăng</string>
    <string name="dang_xuat">Đăng xuất</string>
    <string name="chi_duong">Chỉ đường</string>
    <string name="goi">Gọi</string>
    <string name="chi_tiet_phong">Chi tiết phòng</string>
    <string name="met_vuong">20 m<sup>2</sup></string>

    <string name="sample_details">Giờ giấc tự do, có bảo vệ, camera an ninh, không chung chủ, có hầm để xe rộng đảm bảo an toàn.
Chỉ cần xách vali vào ở ngay.</string>
    <string name="binh_luan">Bình luận</string>
    <string name="tieu_de">Tiêu đề</string>
    <string name="ten_chu">Tên chủ</string>
    <string name="so_dien_thoai">Số điện thoại</string>
    <string name="gia_phong">Giá phòng (VNĐ)</string>
    <string name="dien_tich">Diện tích (m<sup>2</sup>)</string>
    <string name="thong_tin_chi_tiet">Thông tin chi tiết…</string>
    <string name="thong_tin_co_ban">Thông tin cơ bản</string>
    <string name="dia_chi">Địa chỉ</string>
    <string name="quan">Quận</string>
    <string name="ten_duong">Tên đường</string>
    <string name="gia_trieu_dong">Giá (triệu đồng)</string>
    <string name="tien_ich">Tiện ích</string>
    <string name="ap_dung">Áp dụng</string>
    <string name="xoa_loc">Xoá lọc</string>
    <string name="wifi">Wifi</string>
    <string name="tu_do">Tự do</string>
    <string name="chung_chu">Chung chủ</string>
    <string name="sua_phong">Sửa phòng</string>
    <string name="tim_kiem">Tìm kiếm</string>
    <string name="trang_chu">Trang chủ</string>
    <string name="ca_nhan">Cá nhân</string>
    <string name="chon">Chọn</string>
    <string name="chon_dia_chi">Chọn địa chỉ</string>
    <string name="gia_dien">Giá điện (VNĐ/KWh)</string>
    <string name="gia_nuoc">Giá nước (VNĐ/m<sup>3</sup>)</string>
    <string name="quan_trung_tam">Quận trung tâm</string>
    <string name="gia_phong_">Giá phòng:</string>
    <string name="quan_7">Quận 7</string>
    <string name="binh_thanh">Bình Thạnh</string>
    <string name="quan_1">Quận 1</string>
    <string name="quan3">Quận 3</string>
    <string name="quan10">Quận 10</string>
    <string name="dia_chi_label">Địa chỉ:</string>
    <string name="ten_chu_label">Tên chủ:</string>
    <string name="so_dien_thoai_label">Số điện thoại:</string>
    <string name="ho">Họ</string>
    <string name="ngay_sinh">Ngày sinh</string>
    <string name="thanh_pho">Thành phố</string>
    <string name="ho_chi_minh">Hồ Chí Minh</string>
    <string name="dang_nhap_lai">Lỗi, vui lòng đăng nhập lại</string>
    <string name="direction">Direction</string>
    <string name="thong_tin_ca_nhan">Thông tin cá nhân</string>
    <string name="danh_gia">Đánh giá</string>
    <string name="chi_tiet">Chi tiết</string>
    <string name="hinh_anh_phong">Thêm ảnh phòng (Tối đa 5 hình)</string>
    <string name="goi_y">Gợi ý</string>

</resources>
