<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.screens.register.RegisterActivity">

        <include

            android:id="@+id/toolBar"
            layout="@layout/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:cardCornerRadius="@dimen/round_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolBar">


            <ImageView
                android:id="@+id/imageView_avatar"
                android:layout_width="@dimen/wide_image"
                android:layout_height="@dimen/wide_image"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_baseline_add_photo_alternate_32" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_name"
            style="@style/Subtitle2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:background="@drawable/edit_text_background"
            android:hint="@string/ten"
            android:padding="10dp"
            android:maxLength="20"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/cardView_image" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_lastName"
            style="@style/Subtitle2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:background="@drawable/edit_text_background"
            android:hint="@string/ho"
            android:maxLength="50"
            android:padding="10dp"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView_image" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:padding="10dp"
            android:text="@string/ngay_sinh"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_lastName" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:padding="10dp"
            app:layout_constraintStart_toEndOf="@id/textView"
            app:layout_constraintTop_toBottomOf="@id/edit_text_lastName" />

        <ImageView
            android:id="@+id/button_pick_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:src="@drawable/ic_baseline_calendar_today_24"
            app:layout_constraintBottom_toBottomOf="@id/textView_date"
            app:layout_constraintStart_toEndOf="@id/textView_date"
            app:layout_constraintTop_toTopOf="@id/textView_date" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_address"
            style="@style/Subtitle2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:background="@drawable/edit_text_background"
            android:hint="@string/dia_chi"
            android:padding="10dp"
            android:maxLength="100"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_date" />

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/spinner_district"
            style="@style/Subtitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:hint="@string/quan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_address"
            app:ms_background_color="@color/backGroundLightColor" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_city"
            style="@style/Subtitle2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:background="@drawable/edit_text_background"
            android:enabled="false"
            android:hint="@string/thanh_pho"
            android:padding="10dp"
            android:singleLine="true"
            android:text="@string/ho_chi_minh"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner_district" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_phone"
            style="@style/Subtitle2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:background="@drawable/edit_text_background"
            android:hint="@string/so_dien_thoai"
            android:inputType="phone"
            android:padding="10dp"
            android:maxLength="11"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_city" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_email"
            style="@style/Subtitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:background="@drawable/edit_text_background"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:maxLength="100"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_phone" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_pass"
            style="@style/Subtitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:background="@drawable/edit_text_background"
            android:hint="@string/mat_khau"
            android:inputType="textPassword"
            android:padding="10dp"
            android:maxLength="30"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_email" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_pass_confirm"
            style="@style/Subtitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:background="@drawable/edit_text_background"
            android:hint="@string/xac_nhan_mat_khau"
            android:inputType="textPassword"
            android:padding="10dp"
            android:maxLength="30"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_pass" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_register"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/dang_ki"
            app:cornerRadius="@dimen/default_radius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_pass_confirm" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
